make dotted styling decent

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,6 +2,7 @@
   --blockquote: #0a885b;
   --content-header: #05A069;
   --content-header_dark: #474747;
+  --blockquote_dark: #1c4f3d8;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -64,7 +65,7 @@
 }
 blockquote {
   margin-top: 30px;
-  background-color: var(--blockquote) !important;
+  background-color: var(--blockquote_dark) !important;
   margin: 10px auto;
   padding: 15px;
   border: 0px dashed var(--content-header_dark) !important;
