make dotted styling decent

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -7,7 +7,7 @@ author_profile: true
   --blockquote: #0a885b;
   --content-header: #05A069;
   --content-header_dark: #474747;
-  --blockquote_dark: #1c4f3d8;
+  --blockquote_dark: #1c4f3d;
 }
   @media (prefers-color-scheme: dark) {
     blockquote {
