--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,17 +1,25 @@
 :root {
+  --anchor-tag: #4CAFFF;
+  --anchor-tag_hover: #388dd3;
   --blockquote: #0a885b;
   --content-header: #05A069;
   --content-header_dark: #474747;
   --blockquote_dark: #2E3B4E;
   --blockquote_dark_color: #EDEDED;
   --blockquote_dark_anchor: #4CAFFF;
-  --blockquote_dark_anchor_hover: #388dd3;
+  --blockquote_dark_anchor_hover: #3982be;
 }
 
 @media (prefers-color-scheme: dark) {
   body {
     background: black !important;
     color: #fff !important;
+  }
+  .page a{
+    color: var(--anchor-tag) !important;
+  }
+  .page a:hover{
+    color: var(--anchor-tag_hover) !important;
   }
   .page__inner-wrap h3 {
     display: block;
