make dotted styling decent

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -7,7 +7,7 @@ author_profile: true
   --blockquote: #0a885b;
   --content-header: #05A069;
   --content-header_dark: #474747;
-  --blockquote_dark: #1c4f3d;
+  --blockquote_dark: #2E3B4E;
 }
   @media (prefers-color-scheme: dark) {
     blockquote {
@@ -17,6 +17,10 @@ author_profile: true
   border: 0px dashed #05A069 !important;
   border-radius: 5px;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
+}
+.btn--twitter {
+    background-color: #2c5676 !important;
+    color: #fff;
 }
   }
   
