--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -325,6 +325,11 @@ background: #555;
 .greedy-nav a:hover {
   color: #0a5b3f;;
 } 
+.greedy-nav .hidden-links{
+width: 155px;
+background-color: #252525;
+box-shadow: 4px 4px 15px #0a5b3f;
+}
 .greedy-nav .hidden-links a{
 font-size: 1em;
 color: #fff;
@@ -784,7 +789,11 @@ width: 155px;
 background-color: #252525;
 box-shadow: 4px 4px 15px #0a5b3f;
 }
-
+.greedy-nav .hidden-links a{
+font-size: 1em;
+color: #fff;
+text-align: center;
+}
 .greedy-nav__toggle.close:before {
 opacity: 0.65;
 background: #3f3f3f;
