--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -329,6 +329,7 @@ background: #555;
 width: 155px;
 background-color: #252525;
 box-shadow: 4px 4px 15px #0a5b3f;
+font-size: 19px;
 }
 .greedy-nav .hidden-links a{
 font-size: 1em;
