--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -151,6 +151,6 @@
     </script>
     
     
-    
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="8gUPOPSKdBwsZflp2hO4NA" defer="true"></script>
   </body>
 </html>
