edit blockquote to normal text

--- a/_layouts/single_tweets.html
+++ b/_layouts/single_tweets.html
@@ -132,6 +132,7 @@ blockquote {
     border: 1px dashed #49b9de;
     border-radius: 5px;
     box-shadow: 2px 2px 10px rgb(24 32 48);
+    font-style: normal !important;
 }
 .page__content a{
     color: #7fa6e1 ;
