--- a/_layouts/single_tweets.html
+++ b/_layouts/single_tweets.html
@@ -242,3 +242,39 @@ blockquote {
     </div>
   {% endif %}
 </div>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+  // Get the modal
+  var modal = document.getElementById("lightbox-modal");
+
+  // Get the image and insert it inside the modal
+  var modalImg = document.getElementById("lightbox-img");
+
+  // Find all images within .page__content to apply the lightbox feature
+  var images = document.querySelectorAll(".page__inner-wrap img");
+
+  images.forEach(function(image) {
+    image.addEventListener("click", function(event) {
+
+      // Otherwise, open the modal with the image
+      modal.style.display = "block";
+      modalImg.src = this.src;
+    });
+  });
+
+  // Get the <span> element that closes the modal
+  var closeBtn = document.getElementsByClassName("lightbox-close")[0];
+
+  // When the user clicks on <span> (x), close the modal
+  closeBtn.addEventListener("click", function() {
+    modal.style.display = "none";
+  });
+
+  // Close the lightbox if clicked outside the image
+  modal.addEventListener("click", function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  });
+});
+</script>
