--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -152,5 +152,6 @@
     
     
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="8gUPOPSKdBwsZflp2hO4NA" defer="true"></script>
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="Oyd6A1WRwPBBFNNn0f1Xrg" defer="true"></script>
   </body>
 </html>
