--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,8 @@
 
 {% include seo.html %}
 
+<meta name="description" content="{{ seo_description | truncatewords: 150 }}">
+
 {% unless site.atom_feed.hide %}
   <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
 {% endunless %}
