--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -150,7 +150,51 @@
 });
     </script>
     
-    
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+  // Select all <img> elements
+  const images = document.querySelectorAll("img");
+
+  images.forEach((img) => {
+    // Move the current src to data-src
+    const src = img.getAttribute("src");
+    if (src) {
+      img.setAttribute("data-src", src);
+      img.removeAttribute("src"); // Remove the src attribute
+    }
+
+    // Add the lazy class
+    img.classList.add("lazy");
+  });
+
+  // Implement lazy loading
+  const loadImage = (image) => {
+    image.src = image.dataset.src;
+    image.classList.remove("lazy");
+  };
+
+  if ("IntersectionObserver" in window) {
+    const observer = new IntersectionObserver((entries, observer) => {
+      entries.forEach((entry) => {
+        if (entry.isIntersecting) {
+          loadImage(entry.target);
+          observer.unobserve(entry.target);
+        }
+      });
+    });
+
+    document.querySelectorAll("img.lazy").forEach((img) => {
+      observer.observe(img);
+    });
+  } else {
+    // Fallback for browsers without IntersectionObserver
+    document.querySelectorAll("img.lazy").forEach((img) => {
+      loadImage(img);
+    });
+  }
+});
+
+    </script>
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="8gUPOPSKdBwsZflp2hO4NA" defer="true"></script>
   </body>
 </html>
