--- a/_layouts/single_tweets.html
+++ b/_layouts/single_tweets.html
@@ -278,3 +278,18 @@ blockquote {
   });
 });
 </script>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const images = document.querySelectorAll(".page__content img ");
+
+    images.forEach((img) => {
+        const currentSrc = img.getAttribute("src");
+        if (currentSrc) {
+            img.setAttribute("data-src", currentSrc); // Move src to data-src
+            img.setAttribute("src", "https://placehold.co/600x400"); // Set new placeholder src
+            img.classList.add("lazy-image"); // Add lazy-image class
+        }
+    });
+});
+
+</script>
