--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -150,26 +150,7 @@
 });
     </script>
     
-    
+    <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@19.1.3/dist/lazyload.min.js"></script>
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="8gUPOPSKdBwsZflp2hO4NA" defer="true"></script>
-    <script>
-      export function lazyLoadImages(selector, options = { threshold: 0.5 }) {
-  const images = document.querySelectorAll(`${selector}[data-src]`);
-
-  const observer = new IntersectionObserver((entries, observer) => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        const img = entry.target;
-        img.src = img.dataset.src;
-        observer.unobserve(img);
-      }
-    });
-  }, options);
-
-  images.forEach(image => {
-    observer.observe(image);
-  });
-}
-    </script>
   </body>
 </html>
