--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -931,25 +931,17 @@ font-size: 20px;
     display: block;
     font-size: 8px;
   }
-  .side-second-1 {
-    width: 130px; /* Ensures a wide enough clickable area */
-    height: 50px; /* Ensures a tall enough clickable area */
+  .side-second-1 button{
+    width: 130px !important;
+    height: 50px;
     background-color: black;
-    border: 1px solid white;
+    border: 1px solid transparent;
     color: white;
-    border-radius: 5px; /* Slightly larger for better aesthetics */
-    font-size: 16px; /* Ensure text is readable */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+    border-radius: 5px;
   }
-  
-  .side-second-1:focus, .side-second-1:hover {
-    background-color: white; /* Adds hover effect */
-    color: black; /* Changes text color */
+  .side-second-1 button:hover{
+    background-color: #1c1c1c;
   }
-  
   .page__hero--overlay {
     background-color: green !important;
     background-size: cover;
@@ -1043,29 +1035,21 @@ background-blend-mode: multiply;
 .side-second-2{
   margin-left: 30px;
 }
-.side-second-1 {
-  width: 170px; /* Ensures a wide enough clickable area */
-  height: 50px; /* Ensures a tall enough clickable area */
+.side-second-1 button{
+  width: 170px;
+  height: 50px;
   background-color: black;
   border: 1px solid white;
   color: white;
-  border-radius: 5px; /* Slightly larger for better aesthetics */
-  font-size: 16px; /* Ensure text is readable */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
+  border-radius: 1px;
 }
-
-.side-second-1:focus, .side-second-1:hover {
-  background-color: white; /* Adds hover effect */
-  color: black; /* Changes text color */
-}
-
 .page__footer-follow button a {
   padding: 10px 45px;
 }
 
+.side-second-1 button:hover{
+  background-color: #1c1c1c;
+}
  .side-2 ul{
   display: flex;
   flex-direction: column;
