--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
     </div>
     <div class="side-second-1">
       <p>Blockchain & Decentralized Identity Architect — Internet Cryptography Pioneer — Co-author TLS Security Standard — Collaborative Tools & Patterns</p>
-      <button class="side-second-1" onclick="window.location.href='/about/'">About</button>
+      <button><a href="/about/">About</a></button>
     </div>
   </div>
   <div class="side-2">
