--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,3 +37,4 @@
     <script src="{{ script | relative_url }}"></script>
   {% endfor %}
 {% endif %}
+<script src="https://analytics.ahrefs.com/analytics.js" data-key="t6TmCaNeC/Kf51s0N0ABEA" defer="true"></script>
