--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -48,7 +48,7 @@
 {%- endif -%}
 
 <title>{{ seo_title | default: site.title }}{% if paginator %}{% unless paginator.page == 1 %} {{ title_separator }} {{ site.data.ui-text[site.locale].page | default: "Page" }} {{ paginator.page }}{% endunless %}{% endif %}</title>
-<meta name="description" content="{{page.content | truncatewords: 30}}">
+<meta name="description" content="{{page.content | truncatewords: 30 | markdownify}}">
 
 {% if author.name %}
   <meta name="author" content="{{ author.name | default: author }}">
