--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -47,8 +47,8 @@
   {%- assign og_type = "website" -%}
 {%- endif -%}
 
-<title>{{ seo_title | default: site.title }}{% if paginator %}{% unless paginator.page == 1 %} {{ title_separator }} {{ site.data.ui-text[site.locale].page | default: "Page" }} {{ paginator.page }}{% endunless %}{% endif %}</title>
-<meta name="description" content="{{ seo_description | truncatewords: 30 }}">
+<title>{{ seo_title | truncate: 55 | default: site.title }}{% if paginator %}{% unless paginator.page == 1 %} {{ title_separator }} {{ site.data.ui-text[site.locale].page | default: "Page" }} {{ paginator.page }}{% endunless %}{% endif %}</title>
+<meta name="description" content="{{ seo_description | truncate: 155 }}">
 
 {% if author.name %}
   <meta name="author" content="{{ author.name | default: author }}">
@@ -60,11 +60,11 @@
 <meta property="og:type" content="{{ og_type }}">
 <meta property="og:locale" content="{{ site.locale | replace: "-", "_" | default: "en_US" }}">
 <meta property="og:site_name" content="{{ site.title }}">
-<meta property="og:title" content="{{ page.title | default: site.title | markdownify | strip_html | strip_newlines | escape_once }}">
+<meta property="og:title" content="{{ page.title | default: site.title | markdownify | strip_html | strip_newlines | escape_once | truncate: 55 }}">
 <meta property="og:url" content="{{ canonical_url }}">
 
 {% if seo_description %}
-  <meta property="og:description" content="{{ seo_description }}">
+  <meta property="og:description" content="{{ seo_description | truncate: 155 }}">
 {% endif %}
 
 {% if page_large_image %}
@@ -76,7 +76,7 @@
 {% if site.twitter.username %}
   <meta name="twitter:site" content="@{{ site.twitter.username | replace: "@", "" }}">
   <meta name="twitter:title" content="{{ page.title | default: site.title | markdownify | strip_html | strip_newlines | escape_once }}">
-  <meta name="twitter:description" content="{{ seo_description }}">
+  <meta name="twitter:description" content="{{ seo_description | truncate: 155 }}">
   <meta name="twitter:url" content="{{ canonical_url }}">
 
   {% if page_large_image %}
