--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -68,7 +68,7 @@
       {% if site.info.links %}
       {% for link in site.info.links %}
         {% if link.label and link.url %}
-          <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}" style="color: #{{link.color}};" aria-hidden="true"></i> {{ link.label }}</a></li>
+          <li><a href="{{ link.url }}"><i class="{{ link.icon | default: 'fas fa-link' }}" style="color: #{{link.color}};" aria-hidden="true"></i> {{ link.label }}</a></li>
         {% endif %}
       {% endfor %}
     {% endif %}
