--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,6 +10,22 @@
   --blockquote_dark_anchor_hover: #3982be;
 }
 
+.progress-container {
+  width: 100%;
+  height: 3px;
+  background: #000000;
+  position: fixed;
+  z-index: 100000;
+}
+
+.progress-bar {
+  height: 3px;
+  background: #ff0000;
+  width: 0%;
+}
+@media screen and (max-width: 1024px) {
+
+}
 @media (prefers-color-scheme: dark) {
   body {
     background: black !important;
