--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,19 @@
     {% include head/custom.html %}
   </head>
 <style>
+  .progress-container {
+  width: 100%;
+  height: 3px;
+  background: #000000;
+  position: fixed;
+  z-index: 100000;
+}
+
+.progress-bar {
+  height: 3px;
+  background: #ff0000;
+  width: 0%;
+}
   @media screen and (min-width: 80em) {
   .sidebar {
     width: calc(300px - 1em);
