--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -168,7 +168,9 @@
     
     
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="8gUPOPSKdBwsZflp2hO4NA" defer="true">
-      // When the user scrolls the page, execute myFunction 
+    </script>
+    <script>
+            // When the user scrolls the page, execute myFunction 
 window.onscroll = function() {myFunction()};
 
 function myFunction() {
