add sidebar to home page

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -3,249 +3,7 @@ layout: default
 author_profile: true
 ---
 <style>
-  :root {
-  --blockquote: #0a885b;
-  --content-header: #05A069;
-  --content-header_dark: #474747;
-  --blockquote_dark: #2E3B4E;
-}
-  @media (prefers-color-scheme: dark) {
-    blockquote {
-  margin-top: 30px;
-  background-color: var(--blockquote_dark) !important;
-  margin: 10px auto;
-  border: 0px dashed #05A069 !important;
-  border-radius: 5px;
-  box-shadow: 0px 0px 0px #b6e7d6 !important;
-}
-.btn--twitter {
-    background-color: #2c5676 !important;
-    color: #fff;
-}
-  }
-  
-  .wrapper .page__title{
-      text-decoration: none !important;
-  }
-  a.reversefootnote{
-    color: black !important;
-  }
-  .footnotes ol, .footnotes li, .footnotes p{
-    color: #0092CA;
-  }
-  .page{
-    padding-right: 0px !important;
-  }
-  @media screen and (min-width: 80em) {
-  .sidebar {
-    width: calc(300px - 1em);
-    margin-left: 0px;
-}
-.page {
-    padding-right: 0px !important;
-}
-.page {
-    width: calc(100% - 295px);
-    padding-right: 300px;
-}
-#main{
-  margin-left: 115px;
-}
-.author__content {
-    display: block;
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 0;
-}
-.author__urls-wrapper {
-    display: block;
-    margin-left: 20px;
-}
-.page .page__inner-wrap {
-    float: left;
-    margin-top: 0em;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-    clear: both;
-}
-}
-.page__inner-wrap img{
-    border: 1px dashed #49b9de;
-    border-radius: 5px;
-    box-shadow: 2px 2px 20px #b6e7d6;
-    margin: 10px;
-}
-.page__inner-wrap h2{
-  display: block;
-  margin-top: 30px;
-  background-color: rgb(137, 237, 204);
-  padding: 10px 20px 10px 20px;
-  border: 0px dashed #49b9de;
-  border-radius: 5px;
-  box-shadow: 2px 2px 10px #d2f8eb;
-}
-.page__inner-wrap h3{
-  display: block;
-  margin-top: 30px;
-  background-color: rgb(137, 237, 204);
-  padding: 10px 20px 10px 20px;
-  border: 0px dashed #49b9de;
-  border-radius: 5px;
-  box-shadow: 2px 2px 7px #b6e7d6;
-}
-@media screen and (max-width: 64em){
-.page .page__inner-wrap {
-    float: left;
-    margin-top: 1em;
-    margin-left: 5rem;
-    margin-right: 0;
-    width: 100%;
-    clear: both;
-}
-.author__avatar img {
-    max-width: 130px !important;
-    border-radius: 50%;
-    margin-top: 10px;
-    margin-left: 0px !important;
-}
-.verified{
-  display: none !important;
-}
-}
-@media screen and (max-width: 64em){
-  .sidebar.sticky {
-    margin-left: 6em !important;
-}
-.sidebar.sticky .verified {
-    margin-left: 135px;
-    display: none;
-}
-.sidebar.sticky .h-card {
-    margin-right: 20px;
-}
-.sidebar.sticky .h-card .author__avatar  {
-    margin-left: 40px;
-}
-}
-@media (min-width: 64em){
-.page {
-    float: right;
-    width: calc(100%);
-    padding-right: 0px;
-}
-}
-/* The lightbox container */
-.lightbox {
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.9); /* Black background with opacity */
-}
-
-/* Lightbox content (image) */
-.lightbox-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 100%;
-  max-height: 100%;
-  width: 70%;
-  object-fit: contain;
-}
-.page__content img {
-  cursor: pointer;
-}
-
-/* Close button */
-.lightbox-close {
-  position: absolute;
-  top: 20px;
-  right: 35px;
-  color: white;
-  font-size: 40px;
-  font-weight: bold;
-  cursor: pointer;
-}
-.lightbox-close:hover {
-  color: rgb(189, 189, 189);
-}
-@media (min-width: 768px) and (max-width: 1024px) {
-  .page{
-    padding-right: 30px !important;
-  }
-    .author__avatar img {
-      max-width: 130px !important;
-      border-radius: 50%;
-      margin-top: 10px;
-      margin-left: 0px !important;
-      width: 100px !important;
-    }
-    .sticky {
-      clear: both;
-      position: relative !important;
-      position: -webkit-sticky;
-      top: 2em;
-    }
-    .archive {
-      float: right;
-      width: calc(100% - 100px);
-      padding-right: 1px;
-    }
-    .sidebar.sticky {
-      margin-left: 5em !important;
-      margin-right: -4em !important;
-      margin-bottom: 5em;
-    }
-    }
-    @media (min-width: 950px) and (max-width: 1024px) {
-      .sidebar {
-        float: left;
-        width: calc(300px - -22em);
-        opacity: 1;
-        -webkit-transition: opacity 0.2s ease-in-out;
-        transition: opacity 0.2s ease-in-out;
-        margin-bottom: 45px;
-    }
-    .author__bio {
-      margin-top: 30px;
-        margin-bottom: 20px;
-        margin-left: 50px;
-        width: 160%;
-    }
-    .sidebar.sticky {
-        margin-left: 3em ;
-        margin-right: -4em ;
-    }
-    .btn--inverse {
-        background-color: #fff;
-        color: #3d4144;
-        border: 1px solid #f2f3f3;
-        position: absolute;
-        margin-left: 33rem !important;
-        margin-top: -1.5em !important;
-        display: none !important;
-    }
-    .author__urls-wrapper {
-    display: flex;
-    margin-left: 21em;
-    margin-top: 1em;
-}
-}
-@media (min-width: 1025px) and (max-width: 1279px) {
-  .sidebar {
-        margin-left: 2em !important;
-    }
-    .page{
-      width: calc(64%) !important;
-    }
-}
+{% include single_css.css %}
 </style>
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
