--- a/_layouts/custom_about.html
+++ b/_layouts/custom_about.html
@@ -4,117 +4,7 @@ author_profile: true
 ---
 <style>
   
-  .wrapper .page__title{
-      text-decoration: none !important;
-  }
-  a.reversefootnote{
-    color: black !important;
-  }
-  .footnotes ol, .footnotes li, .footnotes p{
-    color: #0092CA;
-  }
-  .page{
-    padding-right: 0px !important;
-  }
-  @media screen and (min-width: 80em) {
-  .sidebar {
-    width: calc(300px - 1em);
-    margin-left: 0px;
-}
-.page {
-    padding-right: 0px !important;
-}
-.page {
-    width: calc(100% - 295px);
-    padding-right: 300px;
-}
-#main{
-  margin-left: 115px;
-}
-.author__content {
-    display: block;
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 0;
-}
-.author__urls-wrapper {
-    display: block;
-    margin-left: 20px;
-}
-.page .page__inner-wrap {
-    float: left;
-    margin-top: 0em;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-    clear: both;
-}
-}
-.page__inner-wrap img{
-    border: 1px dashed #49b9de;
-    border-radius: 5px;
-    box-shadow: 2px 2px 20px #b6e7d6;
-    margin: 10px;
-}
-.page__inner-wrap h2{
-  display: block;
-  margin-top: 30px;
-  background-color: rgb(137, 237, 204);
-  padding: 10px 20px 10px 20px;
-  border: 1px dashed #49b9de;
-  border-radius: 5px;
-  box-shadow: 2px 2px 10px #d2f8eb;
-}
-.page__inner-wrap h3{
-  display: block;
-  margin-top: 30px;
-  background-color: rgb(137, 237, 204);
-  padding: 10px 20px 10px 20px;
-  border: 1px dashed #49b9de;
-  border-radius: 5px;
-  box-shadow: 2px 2px 20px #b6e7d6;
-}
-@media screen and (max-width: 64em){
-.page .page__inner-wrap {
-    float: left;
-    margin-top: 1em;
-    margin-left: 5rem;
-    margin-right: 0;
-    width: 100%;
-    clear: both;
-}
-.author__avatar img {
-    max-width: 130px !important;
-    border-radius: 50%;
-    margin-top: 10px;
-    margin-left: 0px !important;
-}
-.verified{
-  display: none !important;
-}
-}
-@media screen and (max-width: 64em){
-  .sidebar.sticky {
-    margin-left: 6em !important;
-}
-.sidebar.sticky .verified {
-    margin-left: 135px;
-    display: none;
-}
-.sidebar.sticky .h-card {
-    margin-right: 20px;
-}
-.sidebar.sticky .h-card .author__avatar  {
-    margin-left: 40px;
-}
-}
-@media (max-width: 64em){
-.page {
-    float: right;
-    width: calc(100% - 36px) !important;
-    padding-right: 0px;
-}
-}
+  {% include custom_about_css.css %}
 </style>
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
