--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,10 +8,12 @@ $max-width:90%;
 $footer-background-color: #0a4b11;
 $link-color: #0950bb;
 $masthead-link-color: #05A069;
-$bluesky-color: #87CEEB;
 $doc-font-size-x-large: 1.25rem;
 $right-sidebar-width-narrow-one: 300px;
-  
+
+$bluesky-color: #87CEEB;
+$x-color: #000000
+
 .page__footer-copyright,
 .page__footer-follow .social-icons a,
 .page__footer-follow .social-icons li,
