--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,7 +12,7 @@ $doc-font-size-x-large: 1.25rem;
 $right-sidebar-width-narrow-one: 300px;
 
 $bluesky-color: #87CEEB;
-$x-color: #000000
+$x-color: #000000;
 
 .page__footer-copyright,
 .page__footer-follow .social-icons a,
